# neuroloop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: live_dashboard.html  livestream_server.py
src/: __init__.py  backends.py  bitalino.py  cli.py  clocks.py  decode.py  muse.py  process.py  record.py  stream.py  utils.py  view.py
